{
    "name": "TouchController",
    "maps": [
        {
            "name": "GameTouch",
            "id": "e4fd502d-1ca1-4f26-814a-debf6de58251",
            "actions": [
                {
                    "name": "InputAction",
                    "type": "PassThrough",
                    "id": "ec820377-5499-4af2-ae59-3320244d2e8e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InputPosition",
                    "type": "PassThrough",
                    "id": "e6559581-d1c3-4b64-989c-e2bbb7676ccc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "71637a04-617c-41db-9720-1f8bf453870f",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "InputAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b04c634f-f24b-4f08-bf95-322fb661e203",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "MobileTouchScreen",
                    "action": "InputAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20cb42ad-4a57-4bf5-a98e-124d407b15ea",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "InputPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2fbde754-1186-40de-97d1-5c1decd4661e",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MobileTouchScreen",
                    "action": "InputPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MouseAndKeyboard",
            "bindingGroup": "MouseAndKeyboard",
            "devices": []
        },
        {
            "name": "MobileTouchScreen",
            "bindingGroup": "MobileTouchScreen",
            "devices": []
        }
    ]
}